# signer

./: .gitignore  LICENSE  README.md  main.py  names.csv  pyproject.toml  requirements.txt
signer/: main.py  ops.py  tests.py  ui.py
